--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="theme-color" content="#3a3a3a"><link rel="canonical" href="https://switchbladezco.com/"><title>SwitchBladez
-&ndash; Switchbladez</title><meta name="description" content="The perfect and only store you need when it comes down to Knives"><!-- /snippets/social-meta-tags.liquid -->
+  <meta name="theme-color" content="#3a3a3a"><link rel="canonical" href="https://switchbladezco.com/"> <title>SwitchBladez.co</title>
+  <meta name="description" content="The perfect and only store you need when it comes down to Knives"> <!-- /snippets/social-meta-tags.liquid -->
 
 
 
